--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.33.0",
+    "clsx": "^2.1.1",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
     "framer-motion": "^12.12.1",
     "gsap": "^3.13.0",
     "locomotive-scroll": "5.0.0-beta.21",
+    "motion": "^12.12.1",
     "next": "15.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sass": "^1.89.0"
+    "sass": "^1.89.0",
+    "tailwind-merge": "^3.3.0"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
+    "@types/node": "^22.15.19",
+    "@types/react": "^19.1.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.8.3"
   }
 }
